--- a/source/_posts/夏未眠/这夏未眠-简介.md
+++ b/source/_posts/夏未眠/这夏未眠-简介.md
@@ -1,7 +1,7 @@
 ---
 title: 这夏未眠.简介
 date: 2016-09-15 18:13:50
-tags: [夏未眠,青春]
+tags: [夏未眠]
 categories: 夏未眠
 ---
 书整体分为三部分《夏之过往》，《夏之流年》，《夏之未至》。整本书讲的是男主人公顾艾哲（小艾）与莫晨（晨晨）之间的故事，从初中到高中再到大学，从相遇到相知再到相离。
