--- a/source/_posts/机器学习/回归分析之理论篇.md
+++ b/source/_posts/机器学习/回归分析之理论篇.md
@@ -1,7 +1,7 @@
 ---
 title: 回归分析之理论篇
 date: 2017-9-17 08:10:27
-tags: [回归分析,正态分布,T检验,python]
+tags: [回归分析,正态分布]
 categories: 技术篇
 ---
 2015年的机器学习博客其实都是看《机器学习实战》这本书时学到的，说实话当时也是知其然，不知其所以然，以至于对其理解不深刻，好多细节和理论知识都搞的是乱七八糟，自从工作之后再去看一个算法，思考的比之前多了点，查看资料也比之前多了点，生怕理解错误，影响其他人，当然在理解的程度上还是不够深刻，这也是一个学习的过程吧，记录一下，欢迎指正。
