--- a/source/_posts/机器学习/几种距离计算公式在数据挖掘中的应用场景分析.md
+++ b/source/_posts/机器学习/几种距离计算公式在数据挖掘中的应用场景分析.md
@@ -1,7 +1,7 @@
 ---
 title: 几种距离计算公式在数据挖掘中的应用场景分析
 date: 2017-09-20 10:23:39
-tags: [数据挖掘,相似度计算,python]
+tags: [距离计算]
 categories: 技术篇
 ---
 
@@ -13,10 +13,11 @@ categories: 技术篇
 - 皮尔逊相关系数
 - 余弦相似度
 
+<!--More-->
 
 之前整理过一篇关于距离相关的文章：[机器学习算法中的距离和相似性计算公式，分析以及python实现]()
 
-<!--More-->
+
 
 # 闵可夫斯基距离
 两个n维变量a(x11,x12,…,x1n)与 b(x21,x22,…,x2n)间的闵可夫斯基距离定义为：
