--- a/source/_posts/数据结构/数据结构算法之二叉树.md
+++ b/source/_posts/数据结构/数据结构算法之二叉树.md
@@ -86,8 +86,40 @@ class Tree:
                 myq.append(node.left)
             if node.right != None:
                 myq.append(node.right)
-        
-        
+    
+    # 求树的叶子节点
+    def getYeJiedian(self,root):
+        if root == None:
+            return 0
+        if root.left == None and root.right == None:
+            return 1
+
+        return self.getYeJiedian(root.left) + self.getYeJiedian(root.right)
+
+    # 由先序和中序,还原二叉树
+    def preMidToHou(self,pre,mid):
+        if len(pre)==0:
+            return None
+        if len(pre)==1:
+            Node(mid[0])
+        root = Node(pre[0])
+        root_index = mid.index(pre[0])
+        root.left = self.preMidToHou(pre[1:root_index + 1],mid[:root_index])
+        root.right = self.preMidToHou(pre[root_index + 1:],mid[root_index + 1:])
+        return root
+
+    # 由后序和中序,还原二叉树
+    def preMidToHou(self,mid,hou):
+        if len(hou)==0:
+            return None
+        if len(hou)==1:
+            Node(mid[0])
+        root = Node(hou[-1])
+        root_index = mid.index(hou[-1])
+        root.left = self.preMidToHou(mid[:root_index],hou[:root_index])
+        root.right = self.preMidToHou(mid[root_index + 1:],mid[root_index + 1:])
+        return root
+
 # 创建一个树，添加节点
 tree = Tree()
 for i in range(10):
@@ -104,16 +136,59 @@ print(tree.houxu(tree.root))
 
 print("二叉树的层次遍历")
 print(tree.cengci(tree.root))
+
+print("\n二叉树的叶子节点为:")
+print(tree.getYeJiedian(tree.root))
+
+print("\n已知二叉树先序遍历和中序遍历，求后序:")
+print("先序:")
+print(tree.xianxu(tree.root))
+print("中序:")
+print(tree.zhongxu(tree.root))
+print("后序:")
+root = tree.preMidToHou([0,1,3,7,8,4,9,2,5,6],[7,3,8,1,9,4,0,5,2,6])
+print(tree.houxu(root))
+
+print("\n已知二叉树后序遍历和中序遍历，求前序:")
+print("后序:")
+print(tree.houxu(tree.root))
+print("中序:")
+print(tree.zhongxu(tree.root))
+print("前序:")
+root = tree.preMidToHou([7,3,8,1,9,4,0,5,2,6],[7,8,3,9,4,1,5,6,2,0])
+print(tree.xianxu(root))
 ```
 
 运行结果为：
 ```
 二叉树的先序遍历:
 0 1 3 7 8 4 9 2 5 6 None
+
 二叉树的中序遍历:
 7 3 8 1 9 4 0 5 2 6 None
+
 二叉树的后序遍历:
 7 8 3 9 4 1 5 6 2 0 None
+
 二叉树的层次遍历
 0 1 2 3 4 5 6 7 8 9 None
+
+二叉树的叶子节点为:
+5
+
+已知二叉树先序遍历和中序遍历，求后序:
+先序:
+0  1  3  7  8  4  9  2  5  6  None
+中序:
+7  3  8  1  9  4  0  5  2  6  None
+后序:
+1  3  7  8  4  9  0  5  2  6  None
+
+已知二叉树后序遍历和中序遍历，求前序:
+后序:
+7  8  3  9  4  1  5  6  2  0  None
+中序:
+7  3  8  1  9  4  0  5  2  6  None
+前序:
+0  1  3  7  8  4  9  6  2  5  None
 ```
